[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Sticks/LargeHandleFilledGrey.png" type="Texture" id=1]
[ext_resource path="res://Scripts/JoyStick.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Sticks/LargeHandleFilled.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[node name="JoyStick" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -500.0
margin_right = 250.0

[node name="Touch" type="TouchScreenButton" parent="Control"]
position = Vector2( 42, -4 )
scale = Vector2( 2, 2 )
z_index = 1
shape = SubResource( 3 )

[node name="Big_Circle" type="Sprite" parent="Control/Touch"]
visible = false
position = Vector2( 104, 100 )
texture = ExtResource( 3 )

[node name="Small_Circle" type="Sprite" parent="Control/Touch"]
visible = false
position = Vector2( 104, 100 )
texture = ExtResource( 1 )

[connection signal="pressed" from="Control/Touch" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Control/Touch" to="." method="_on_TouchScreenButton_released"]
